# IO-AIO

./: AIO.pm  AIO.xs  Changes  MANIFEST  META.json  META.yml  Makefile.PL  README  autoconf.pm  configure  configure.ac  def0.h  genac  gendef0  schmorp.h  typemap  xthread.h
autoconf/: config.h.in  configure  configure.ac
libeio/: config.h.in  eio.h
t/: 01_stat.t  02_read.t  03_errors.t  04_fork.t  05_readdir.t  07_feeder.t
